maj des bibliothèques, plugins, etc.