@@ -19,8 +19,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
-        <compiler.source>17</compiler.source>
-        <compiler.target>17</compiler.target> 
+        <compiler.source>21</compiler.source>
+        <compiler.target>21</compiler.target>
     </properties>
 
 
@@ -35,7 +35,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
+                </configuration>
             </plugin>
 
 
@@ -48,10 +53,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.12.1</version>
                 <configuration>
-                    <source>17</source> <!-- éventuellement à changer : version de java -->
-                    <target>17</target> <!-- éventuellement à changer : version de java -->
+                    <source>21</source> <!-- éventuellement à changer : version de java -->
+                    <target>21</target> <!-- éventuellement à changer : version de java -->
                 </configuration>
             </plugin>
 
